# insider_detection_vkr

./: .dockerignore  .gitignore  Dockerfile  Vagrantfile  ansible.cfg  pyproject.toml
ansible/: inventory.yml  site.yml
ansible/group_vars/: all.yml  clients.yml  core.yml  sensors.yml
ansible/host_vars/: client_a.yml  client_b.yml  sensor_a.yml  sensor_b.yml
app/: db.py  main.py  rules_engine.py  settings.py
app/api/: deps.py  router.py
app/core/: lifespan.py
app/integrations/: telegram.py
app/models/: __init__.py  alert.py  event.py  profile.py
app/routers/: alerts.py  events.py  ingest.py  profiles.py  rules.py
app/schemas/: alert.py  event.py  profile.py
app/services/: alerts.py  event.py  ingest.py  profiles.py  rules.py
app/utils/: formatting.py
deployments/core/: docker-compose.core.yml
deployments/sensor/: docker-compose.sensor.yml
deployments/vector/: vector.yaml
loadtests/: ingest_load.py
migrations/: env.py
migrations/versions/: 0656ec6f4bde_drop_trap_id_from_alerts.py  691acf9f6b82_drop_profiles_state_column.py  9313ef727012_add_events_rule_eval_column.py  e8bbef329343_init_schema.py  ee76ab4ef120_drop_trap_id_from_profiles.py
rules/: rules.yaml
sensors/: ftp_server.py  http_service.py
sensors/bait/: employees.csv  salary_report_2025.txt  vpn_passwords.txt
tests/: conftest.py
tests/integration/: conftest.py  test_api_alerts.py  test_api_events.py  test_api_ingest.py  test_api_misc.py  test_api_profiles.py  test_ingest_service.py
tests/unit/: test_decay_risk.py  test_dedup.py  test_evaluate_rules.py  test_formatting.py  test_ftp_sensor.py  test_http_sensor.py  test_is_off_hours.py  test_load_rules.py  test_match_rule.py  test_schemas_event.py  test_services_alerts.py  (+5 more)
(+13 files in other folders)
